add client(gamepad control, policy on windows gpu) and server(arm on raspi) scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -210,7 +210,9 @@ lerobot-find-joint-limits="lerobot.scripts.lerobot_find_joint_limits:main"
 lerobot-imgtransform-viz="lerobot.scripts.lerobot_imgtransform_viz:main"
 lerobot-edit-dataset="lerobot.scripts.lerobot_edit_dataset:main"
 lerobot-setup-can="lerobot.scripts.lerobot_setup_can:main"
-lerobot-gamepad-control = "lerobot.scripts.lerobot_gamepad_control:main"
+lerobot-gamepad-control="lerobot.scripts.lerobot_gamepad_control:main"
+lerobot-gamepad-control-client="lerobot.scripts.lerobot_gamepad_control_client:main"
+lerobot-gamepad-control-server="lerobot.scripts.lerobot_gamepad_control_server:main"
 
 # ---------------- Tool Configurations ----------------
 [tool.setuptools.packages.find]
